--- a/app/design/adminhtml/default/default/template/customersegmentation/segment/sequence/form_scripts.phtml
+++ b/app/design/adminhtml/default/default/template/customersegmentation/segment/sequence/form_scripts.phtml
@@ -1,3 +1,12 @@
+<?php
+/**
+ * Maho
+ *
+ * @package    Maho_CustomerSegmentation
+ * @copyright  Copyright (c) 2025 Maho (https://mahocommerce.com)
+ * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ */
+?>
 <script type="text/javascript">
 function toggleCouponFields(generateCoupon) {
     const couponFields = ['coupon_sales_rule_id', 'coupon_prefix', 'coupon_expires_days'];
